sumo/tests/traci/VariableSubscription/errors/UnknownVariable/errors.traci
Warning: Using direct subscription messages is deprecated; subscribe via the object API.
Error: Answered with error to command 164: Get Vehicle Variable: unsupported variable specified
Error: Answered with error to command 212: Could not add subscription (Get Vehicle Variable: unsupported variable specified).
